# intchesskill

./: .gitignore  BUILD.md  CHESS_COM_LICHESS_SUPPORT.md  CMakeLists.txt  ColorUtils.h  ConfigLoader.h  DETECTION_IMPROVEMENTS.md  DebugOverlay.h  DetectionConfig.h  EdgeDetection.h  IMPLEMENTATION_SUMMARY.md  Makefile.mingw  PORTING_SUMMARY.md  README.TXT  README.md  ScreenScanerForm.cpp  ScreenScanerForm.h  SquareViewWindow.cpp  TBoardCapture.cpp  TBoardCapture.h  TBoardRecognize.cpp  TBoardRecognize.h  TDebug.cpp  TEngine.cpp  TEngine.h  TMainThreadObject.cpp  TMainThreadObject.h  TPlayer.cpp  TState.cpp  TState.h  TUCIInterface.cpp  TUCIInterface.h  VCL_VS_MINGW.md  VERIFICATION_CHECKLIST.md  detection.ini  find_pos.cpp  main_win32.cpp  parse.cpp  process.cpp  process.h  (+1 more)
fruit/: posix.cpp
